Adding controls for ensuring we can connect to multiple types of timing systems. Added interface for receiving chipreads and setting the date of an Ipico Timing System. Moved the DateTime to and from Epoch (seconds) functions into the constants class. Changed some lingering EventDirector names. Changed how we connect to TimingSystems to ensure we can connect to multiple sockets for Ipico systems. Removed some unneeded calls from the ITimingSystemInterface.

--- a/ChronoKeep/ChronoKeep.csproj
+++ b/ChronoKeep/ChronoKeep.csproj
@@ -245,6 +245,7 @@
     <Compile Include="Objects\Range.cs" />
     <Compile Include="Objects\Segment.cs" />
     <Compile Include="Objects\TimingSystem.cs" />
+    <Compile Include="Timing\Interfaces\IpicoInterface.cs" />
     <Compile Include="Timing\TimingController.cs" />
     <Compile Include="Timing\TimingWorker.cs" />
     <Compile Include="UI\ChipAssignment\ChipTool.xaml.cs">
@@ -426,7 +427,7 @@
     <Compile Include="UI\Timing\RFID\RFIDSettings.xaml.cs">
       <DependentUpon>RFIDSettings.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Timing\RFID\RFIDUltraInterface.cs" />
+    <Compile Include="Timing\Interfaces\RFIDUltraInterface.cs" />
     <Compile Include="UI\UHF RFID Reader\RFIDSerial.cs" />
     <Compile Include="Database\SQLiteInterface.cs" />
     <Compile Include="Network\TCPServer.cs" />
