--- a/ChronoKeep/ChronoKeep.csproj
+++ b/ChronoKeep/ChronoKeep.csproj
@@ -256,6 +256,7 @@
     <Compile Include="Objects\Range.cs" />
     <Compile Include="Objects\Segment.cs" />
     <Compile Include="Objects\TimingSystem.cs" />
+    <Compile Include="Properties\VersionInfo.cs" />
     <Compile Include="Timing\Interfaces\IpicoInterface.cs" />
     <Compile Include="Timing\TimingController.cs" />
     <Compile Include="Timing\TimingWorker.cs" />
@@ -433,11 +434,6 @@
     </Compile>
     <Compile Include="IO\Printerface.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\FileVersion.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>FileVersion.tt</DependentUpon>
-    </Compile>
     <Compile Include="UI\Timing\RFID\RFIDSettings.xaml.cs">
       <DependentUpon>RFIDSettings.xaml</DependentUpon>
     </Compile>
@@ -754,10 +750,6 @@
     <EmbeddedResource Include="IO\HtmlTemplates\jquery-3.4.1.min.js" />
     <Content Include="IO\HtmlTemplates\style.css" />
     <EmbeddedResource Include="IO\HtmlTemplates\style.min.css" />
-    <Content Include="Properties\FileVersion.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>FileVersion.cs</LastGenOutput>
-    </Content>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
