--- a/ChronoKeep/packages.config
+++ b/ChronoKeep/packages.config
@@ -6,5 +6,10 @@
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="PDFsharp-MigraDoc-gdi" version="1.50.5147" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.113.7" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Net.Http.WinHttpHandler" version="5.0.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
 </packages>
