Added auto upload code for Chronokeep API. Added delete results for API auto upload to ensure no stale data gets uploaded. Fixed an issue where Updating an event would throw an error if API_ID and API_EVENT_ID were not set in the event (i.e. null) Fixed a bug where segments and division specific age groups wouldn't copy due to the translation dict not being set up properly.

--- a/ChronoKeep/ChronoKeep.csproj
+++ b/ChronoKeep/ChronoKeep.csproj
@@ -227,6 +227,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="API\APIController.cs" />
     <Compile Include="Constants\DashboardLabels.cs" />
     <Compile Include="Constants\ResultsAPI.cs" />
     <Compile Include="Constants\Timing.cs" />
