Added some filtering to what the database pulls for announcer reads so we don't always have to parse every single announcer read. Added announcer to be a potential location for a timing mat.

--- a/ChronoKeep/ChronoKeep.csproj
+++ b/ChronoKeep/ChronoKeep.csproj
@@ -276,6 +276,7 @@
     <Compile Include="Network\API\APIHandlers.cs" />
     <Compile Include="Network\HttpServer.cs" />
     <Compile Include="Objects\AgeGroup.cs" />
+    <Compile Include="Objects\AnnouncerParticipant.cs" />
     <Compile Include="Objects\ChronoKeepAPI\APIEvent.cs" />
     <Compile Include="Objects\ChronoKeepAPI\APIEventYear.cs" />
     <Compile Include="Objects\ChronoKeepAPI\Requests.cs" />
