Renamed AnnoucerThread to AnnouncerWorker to better reflect what it does. Added a constant so we can pull all unprocessed and those announcer reads that were used to prevent announcing finishers that we've already seen if we need to re-open the program. Added a call to the IMainWindow interface so we can check if we've got an announcer chip reader connected. The seconds in an announcer participant are seconds from the epoch, so we've corrected the When function so it doesn't show something ridiculous. Work is progressing on the AnnouncerWindow.

--- a/ChronoKeep/ChronoKeep.csproj
+++ b/ChronoKeep/ChronoKeep.csproj
@@ -290,7 +290,7 @@
     <Compile Include="Objects\Segment.cs" />
     <Compile Include="Objects\TimingSystem.cs" />
     <Compile Include="Properties\VersionInfo.cs" />
-    <Compile Include="Timing\Announcer\AnnouncerThread.cs" />
+    <Compile Include="Timing\Announcer\AnnouncerWorker.cs" />
     <Compile Include="Timing\Interfaces\IpicoInterface.cs" />
     <Compile Include="Timing\TimingController.cs" />
     <Compile Include="Timing\TimingWorker.cs" />
