Exporting with Excel no longer formats times in stupid ways because formats are set to text. Potential bug fix with a setup error when exporting results. Added the option to export into a format for the Boston Athletics Association for submitting times for Boston.

--- a/ChronoKeep/ChronoKeep.csproj
+++ b/ChronoKeep/ChronoKeep.csproj
@@ -318,6 +318,9 @@
     </Compile>
     <Compile Include="IO\CSVExporter.cs" />
     <Compile Include="IO\ExcelExporter.cs" />
+    <Compile Include="UI\Export\ExportBAAResults.xaml.cs">
+      <DependentUpon>ExportBAAResults.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\Export\ExportResults.xaml.cs">
       <DependentUpon>ExportResults.xaml</DependentUpon>
     </Compile>
@@ -481,6 +484,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\EventWindows\ChangeEventWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Export\ExportBAAResults.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
