--- a/ChronoKeep/packages.config
+++ b/ChronoKeep/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Extended.Wpf.Toolkit" version="4.1.0" targetFramework="net472" />
-  <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.4" targetFramework="net48" />
-  <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.4" targetFramework="net48" />
+  <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.0" targetFramework="net48" />
+  <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="PDFsharp-MigraDoc-gdi" version="1.50.5147" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.0" targetFramework="net48" />
